@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Sun Jul 06 16:20:50 EEST 2014
+#Sun Jul 06 17:30:52 EEST 2014
 FileChooser.acceptAllFileFilterText=Toate tipurile de fi\u0219iere (*.*)
 FileChooser.cancelButtonText=Anulare
 FileChooser.cancelButtonToolTipText=Anulare
@@ -95,7 +95,6 @@ lbl.tests=Teste
 lbl.theme=Tem\u0103
 lbl.update...=Actualizare...
 lbl.yes=Da
-msg.preferences-restart=Schimb\u0103rile efectuate vor fi vizibile\nla urm\u0103toarea lansare a aplica\u021Biei
 msg.CHOOSE-PARTICIPANT=<html>V\u0103 rug\u0103m s\u0103 alege\u021Bi, sau s\u0103 ad\u0103uga\u021Bi, un participant folosind op\u021Biunile din partea dreapt\u0103. Ap\u0103sa\u021Bi apoi butonul [CONTINUARE] pentru a trece la pasul urm\u0103tor</html>
 msg.CHOOSE-TEST=<html>V\u0103 rug\u0103m s\u0103 alege\u021Bi o prob\u0103 din lista de mai jos. Ve\u021Bi putea apoi s\u0103 o aplica\u021Bi prin ap\u0103sarea butonului [APLIC\u0102&nbsp;ACUM] sau, pute\u021Bi folosi butonul [\u00CENTOARCERE] pentru a selecta un alt participant</html>
 msg.application-is-up-to-date=Aplica\u021Bia este actualizat\u0103
@@ -105,11 +104,13 @@ msg.downloading-update-list=Se descarc\u0103 lista de actualiz\u0103ri. V\u0103 
 msg.downloading-updates-finished=Desc\u0103rcarea actualiz\u0103rilor s-a finalizat.
 msg.how-many-random-participants=Registrul curent nu con\u021Bine nici un participant. Prin intermediul acestui dialog pute\u021Bi\npreciza c\u00E2\u021Bi participan\u021Bi, genera\u021Bi \u00EEn mod aleator, dori\u021Bi s\u0103 fie ad\u0103uga\u021Bi (maxim {0}).\nPentru a nu introduce nici un participant fictiv l\u0103sa\u021Bi valoarea implict\u0103 - 0
 msg.name-cannot-be-empty=Este necesar\u0103 specificarea prenumelui participantului
+msg.no-participant-selected=Nu s-a ales nici un participant 
 msg.participant-was-changed=Datele participantului {0} au fost modificate.\nDori\u021Bi s\u0103 salva\u021Bi modific\u0103rile?
 msg.please-choose-participant=V\u0103 invit\u0103m s\u0103 alege\u021Bi un participant
 msg.please-choose-test=V\u0103 rug\u0103m s\u0103 alege\u021Bi un test din meniu
 msg.please-choose-workbook=V\u0103 rug\u0103m s\u0103 opta\u021Bi pentru un registru de date
 msg.please-wait-generating-participants=Se genereaz\u0103 lista de participan\u021Bi. V\u0103 rug\u0103m s\u0103 a\u0219tepta\u021Bi...
+msg.preferences-restart=Schimb\u0103rile efectuate vor fi vizibile\nla urm\u0103toarea lansare a aplica\u021Biei
 msg.press-key-for-next=Ap\u0103sa\u021Bi [{0}] pentru a avansa
 msg.press-key-for-previous=Ap\u0103sa\u021Bi [{0}] pentru a v\u0103 \u00EEntoarce
 msg.press-start-to-start=Ap\u0103sa\u021Bi butonul [{0}] pentru a \u00EEncepe testul
